# microwave_toolbox

./: .gitignore  CHANGELOG.txt  GPATH  GRTAGS  GTAGS  LICENSE  MaterialProperties.csv  README.md  TAGS  a1.txt  components.py  constants.py  filters.py  genel.py  git.exe.stackdump  git_sync.bat  license_text_to_include_to_source_files.txt  mwtoolbox_examples.html  mwutils.py  myconstants.py  network.py  networksym.py  pyproject.toml  pyrightconfig.json  pysmith.py  scratchbook.py  setup - Copy.py  setup.cfg1  setup.py  touchstone.py  transmission_lines.py
Technical Notes/: CPWG impedance formula.md  ModeMatching_Calcs.wxmx  stripline_step_in_width.wxmx
doc/: a.txt  make_latexpdf.bat
doc/source/: conf.py  genel.rst  index.rst  mwtoolbox.rst  networksym.rst  quantities.constants.rst  quantities.rst  quantities.units.rst  touchstone.rst
docs/: make_latexpdf.bat
docs/source/: conf.py  mwtoolbox.rst
em/2d_fdfd/: 2d_fdfd_pml.tm  fdfd_cs3.py  grid.py  grid2.py
em/fdfd_2d/: 2d_fdfd.tm  2d_fdfd_pml.tm  fdfd_2d.py  fdfd_cs3.py  fdfd_cs3_old_working.py  grid.py  grid2.py
em/mode_matching/: mode_matching_module.py
mwtoolbox/: __init__.py  components.py  genel.py  myconstants.py  network.py  networksym.py  pyproject.toml  t.py  touchstone.py  transmission_lines.py
mwtoolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notes_docs_refs/: CPWG impedance formula.org
notes_docs_refs/fdfd_2d/: 2d_fdfd.tex  2d_fdfd.tm  2d_fdfd_pml.tex  _region_.tex
notes_docs_refs/sphinx_help/: conf.py
src/em/: __init__.py
src/em/fdfd_2d/: grid3.py  (+2 more)
src/mwtoolbox/: .touchstone.py.~undo-tree~  __init__.py  components.py  filters.py  genel.py  mwutils.py  network.py  networksym.py  rfnetwork.py  t.py  touchstone.py  transmission_lines.py
src/mwtoolbox.egg-info/: PKG-INFO  SOURCES.txt
src/mwtoolbox_terdol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
temp/: Chip_impedance_average_allboards_allports.s1p  Chip_impedance_average_allboards_allports_smoothed.s1p  CoaxWG_HFSSDesign1.s2p  CoaxWG_HFSSDesign1_half.s2p  CoaxWG_HFSSDesign2.s2p  DraggableMarker_multiplemarkers.py  temp.py  test.rst  untitled3.py  untitled4.py
tests/: WR12_SIW_MS_Transition_Design1_10_unnormalized.s2p  WR12_SIW_MS_Transition_Design1_29.s2p  WR12_SIW_MS_Transition_Design1_Al_RI_unnormalized.s2p  WR12_SIW_MS_Transition_Design1_Al_dB_unnormalized.s2p  nlopt_test.py  test1.py  test2.py  tests.py  tests4.py
tests/conj_load/: HalfModel_CPW5_DEMSB_RX1.s2p  test1.py  test2.py
tests/extract_gamma/: trl.py
tests/trl_test/: b2b_extract.py  trl.py  trl2.py  (+5 more)
uml_diagrams/: data_array_workflow.uxf
(+84 files in other folders)
