[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools', 'wheel']

[project]
name = "mwtoolbox_terdol"
version = "0.1.0"
dependencies = ["quantities",
                "numpy",
                "scipy",
                "sympy",
                ]
description="Microwave Toolbox"
readme = "README.md"
keywords = ["microwave", "rf", "s-parameters"]
authors = [{ name = "Tuncay Erdöl", email = "terdol@hotmail.com"}]
requires-python = ">=3.7"
license = {text = "GPL-3.0-or-later"}
classifiers=[
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.yapfignore]
ignore_patterns = [
  "temp/**/*.py",
  "temp2/*.py"
]

[tool.yapf]
ARITHMETIC_PRECEDENCE_INDICATION = true
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = false
BLANK_LINE_BEFORE_MODULE_DOCSTRING = false
BLANK_LINE_BEFORE_CLASS_DOCSTRING = false
COALESCE_BRACKETS = true
CONTINUATION_ALIGN_STYLE = "SPACE"
CONTINUATION_INDENT_WIDTH = 2
DEDENT_CLOSING_BRACKETS = true
DISABLE_ENDING_COMMA_HEURISTIC = true
EACH_DICT_ENTRY_ON_SEPARATE_LINE = false
FORCE_MULTILINE_DICT = false
INDENT_DICTIONARY_VALUE = true
INDENT_WIDTH = 4
INDENT_CLOSING_BRACKETS = true
JOIN_MULTIPLE_LINES = true
NO_SPACES_AROUND_SELECTED_BINARY_OPERATORS = "*,/"
SPACES_AROUND_POWER_OPERATOR = false
SPACES_AROUND_DEFAULT_OR_NAMED_ASSIGN = false
SPACES_AROUND_DICT_DELIMITERS = true
SPACES_AROUND_LIST_DELIMITERS = true
SPACES_AROUND_SUBSCRIPT_COLON = false
SPACES_AROUND_TUPLE_DELIMITERS = true
SPACES_BEFORE_COMMENT = 5
SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET = true
SPACE_INSIDE_BRACKETS = true
SPLIT_ALL_COMMA_SEPARATED_VALUES = false
SPLIT_ALL_TOP_LEVEL_COMMA_SEPARATED_VALUES = false
SPLIT_BEFORE_ARITHMETIC_OPERATOR = true
SPLIT_BEFORE_BITWISE_OPERATOR = true
SPLIT_BEFORE_CLOSING_BRACKET = true
SPLIT_BEFORE_DICT_SET_GENERATOR = true
SPLIT_BEFORE_DOT = true
SPLIT_BEFORE_EXPRESSION_AFTER_OPENING_PAREN = true
SPLIT_BEFORE_FIRST_ARGUMENT = true
SPLIT_BEFORE_LOGICAL_OPERATOR = true
SPLIT_BEFORE_NAMED_ASSIGNS = true
SPLIT_COMPLEX_COMPREHENSION = true
USE_TABS = false


[tool.pyright]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 'version = "{version}"'
]
"src/mwtoolbox/__init__.py" = ['__version__ = "{version}"']
"README.md" = [
    "{version}",
    "{pep440_version}",
]

